--- a/roles/mysql/tasks/main.yaml
+++ b/roles/mysql/tasks/main.yaml
@@ -3,7 +3,7 @@
     name: mysql-server
     state: present
 
-- name: Start service httpd, if not started
+- name: Start mysql
   ansible.builtin.service:
     name: mysqld
     state: started
@@ -23,7 +23,7 @@
 
 - name: create mysql root password
   ansible.builtin.command: "mysql_secure_installation --set-root-pass ExpenseApp@1"
-  when: mysql_info failed is true
+  when: mysql_info.failed is true
    
 
 
