--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -52,7 +52,7 @@
 - name: import mysql data
   community.mysql.mysql_db:
     login_user: root
-    login_password: "{{ mysql_password }}"
+    login_password: "{{ mysql_root_password }}"
     login_host: "{{ login_host }}"
     target: "/app/schema/backend.sql"
     state: "import"
