--- a/roles/fronteend/tasks/main.yaml
+++ b/roles/fronteend/tasks/main.yaml
@@ -9,36 +9,19 @@
     state: started
     enabled: true
 
-- name: delete app dir  
-  ansible.builtin.file:
-    path: /usr/share/nginx/html/
-    state: absent
-
-- name: create app dir
-  ansible.builtin.file:
-    path: /usr/share/nginx/html/
-    state: directory
-
-- name:  download the frontend code
-  ansible.builtin.get_url:
-    url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip
-    dest: /tmp/frontend.zip
-
-- name: unarachive frontend code
-  ansible.builtin.unarchive:
-    src: /tmp/frontend.zip
-    dest: /usr/share/nginx/html
-    remote_src: yes
+- name: import tasks from common
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: main
 
 - name : copy expense expense.conf
   ansible.builtin.template:
     src: expense.conf.j2
     dest: /etc/nginx/default.d/expense.conf
+  notify:
+  - Restart nginx
 
-- name: restart nginix
-  ansible.builtin.service:
-    name: nginx
-    state: restarted
+
    
 
     
