--- a/roles/frontend/tasks/main.yaml
+++ b/roles/frontend/tasks/main.yaml
@@ -1,14 +1,12 @@
-- name: install nginx
+- name: install nginx server
   ansible.builtin.package:
     name: nginx
     state: present
-
-- name: start and enable nginx
+- name: start nginx server
   ansible.builtin.service:
     name: nginx
     state: started
     enabled: yes
-
 
 # - name: import tasks from common
 #   ansible.builtin.import_role:
