--- a/nginx.yaml
+++ b/nginx.yaml
@@ -7,10 +7,10 @@
   - name: install nginx
     ansible.builtin.package:
       name: nginx
-      state: present
+      state: absent
 
-  - name: start nginx
-    ansible.builtin.service:
-      name: nginx
-      state: started
-      enabled: yes
+  # - name: start nginx
+  #   ansible.builtin.service:
+  #     name: nginx
+  #     state: started
+  #     enabled: yes
